# gmalglib

./: .gitignore  README.en.md  README.md  benchmark.py  gmalglib.sln  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.py  tests.py
.github/workflows/: python-publish.yml  python-test.yml
docs/: api.md  index.md
include/gmalglib/: bignum.h  primefield.h  random.h  sm2.h  sm2curve.h  sm2table.h  sm3.h  sm4.h  sm9.h  sm9curve.h  sm9table.h  zuc.h
sm3/: sm3.c  sm3.h  sm3.vcxproj  sm3.vcxproj.filters  sm3module.c  test.c
sm4/: sm4.c  sm4.vcxproj  sm4.vcxproj.filters  sm4module.c
src/gmalglib/: __init__.py  _coremodule.c  coremodule.c  sm2.py  sm2.pyi  sm3.c  sm3.py  sm3.pyi  sm3module.c  sm4.c  sm4.py  sm4.pyi  sm4module.c  wrapped.py  zuc.py  zuc.pyi
src/gmalglib/core/: bignum.c  (+12 more)
src/test/: bignumtest.c  primefieldtest.c  sm2curvetest.c  sm2test.c  sm3test.c  sm4test.c  sm9curvetest.c  sm9test.c  zuctest.c
vsproject/: _core.vcxproj  _core.vcxproj.filters  bignumtest.vcxproj  bignumtest.vcxproj.filters  core.vcxproj  core.vcxproj.filters  gmalglib.props  gmalglib.sln  gmalglibtest.props  primefieldtest.vcxproj  primefieldtest.vcxproj.filters  sm2curvetest.vcxproj  sm2curvetest.vcxproj.filters  sm2test.vcxproj  sm2test.vcxproj.filters  sm3.vcxproj  sm3.vcxproj.filters  sm3test.vcxproj  sm3test.vcxproj.filters  sm4.vcxproj  sm4.vcxproj.filters  sm4test.vcxproj  sm4test.vcxproj.filters  sm9curvetest.vcxproj  sm9curvetest.vcxproj.filters  sm9test.vcxproj  sm9test.vcxproj.filters  zuc.vcxproj  zuc.vcxproj.filters  zuctest.vcxproj  zuctest.vcxproj.filters
